<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:id="@+id/ll">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/login_activity_heading"
        android:textColor="#aaaaaa"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/Busno"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50dp">


        <EditText
            android:id="@+id/Busno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_login_hint"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@+id/dpass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/dpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@+id/checkSchoolToHome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Busno"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <CheckBox
            android:id="@+id/checkSchoolToHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_layout_padding_all"
            android:text="@string/check_trip"
            android:theme="@style/materialCheckBox"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dpass"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_in"
            android:theme="@style/materialButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkSchoolToHome"
            android:layout_marginTop="20dp"
            android:onClick="doLogin"
            android:layout_marginBottom="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>